--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -923,6 +923,8 @@ Body:
         Price: 15000
       - Item: C_Blink_Eyes_Cocktai_BU
         Price: 15000
+      - Item: C_Blinking_Thin_Eyes
+        Price: 15000
       - Item: C_False_Ears
         Price: 15000
       - Item: C12th_ElvenEars
@@ -940,4 +942,174 @@ Body:
       - Item: C_Under_Rim_Glasses_Red
         Price: 15000
       - Item: C_Under_Rim_Glasses_Bu
+        Price: 15000
+      - Item: C_Half_Rim_Glasses
+        Price: 15000
+      - Item: C_New_Wave_Sunglass
+        Price: 15000
+      - Item: C_Pope_Ribbon
+        Price: 15000
+      - Item: C_Twin_Margaret
+        Price: 15000
+      - Item: C_Noble_Mask
+        Price: 15000
+      - Item: C_Crow_Tengu_Mask
+        Price: 15000
+      - Item: C_Charleston_Antenna
+        Price: 15000
+      - Item: C_Crimson_Booster
+        Price: 15000
+      - Item: C_Cyber_Income
+        Price: 15000
+      - Item: C_OpenAir_Headset
+        Price: 15000
+      - Item: C_Flying_Drone
+        Price: 15000
+      - Item: C_SeraphimCoronet
+        Price: 15000
+      - Item: C_Male_Poring_Earmuff
+        Price: 15000
+      - Item: C_CatEarRibbon_TW
+        Price: 15000
+      - Item: C_Picnic_Basket
+        Price: 15000
+      - Item: C_PocketWatch_Hair_Orna
+        Price: 15000
+      - Item: C_LittleGarden
+        Price: 15000
+      - Item: C_Mike_Stand
+        Price: 15000
+      - Item: C_War_Princess_Ribbon
+        Price: 15000
+      - Item: C_ZombieMask
+        Price: 15000
+      - Item: C_Magic_Heir_TW
+        Price: 15000
+      - Item: C_Wonder_Egg_Basket
+        Price: 15000
+      - Item: C_Flying_Drone
+        Price: 15000
+      - Item: C_Panda_Rabbit
+        Price: 15000
+      - Item: C_Kishu_Inu
+        Price: 15000
+      - Item: C_Glow_Of_New_Year
+        Price: 15000
+      - Item: C_Love_Feeling_J
+        Price: 15000
+      - Item: C_Long_Ribbon
+        Price: 15000
+      - Item: C_Blossom_Glasses
+        Price: 15000
+      - Item: C_Floating_Parasol
+        Price: 15000
+      - Item: C_Jioia_TW
+        Price: 15000
+      - Item: C_Black_Thunder
+        Price: 15000
+      - Item: C_Pet_Popcorn_Box
+        Price: 15000
+      - Item: C_Carefree_Face
+        Price: 15000
+      - Item: C_Blink_Eyes_Golden
+        Price: 15000
+      - Item: C_Avenger
+        Price: 15000
+      - Item: C_Silk_Of_Soul
+        Price: 15000
+      - Item: C_Blinking_Eyes_BU
+        Price: 15000
+      - Item: C_Deviruchi_Apron
+        Price: 15000
+      - Item: C_Fish_Marche
+        Price: 15000
+      - Item: C_White_Cat_On_Shoulder
+        Price: 15000
+      - Item: C_Teardrop
+        Price: 15000
+      - Item: C_Happy_Lunatic_Ear
+        Price: 15000
+      - Item: aegis_410169
+        Price: 15000
+      - Item: C_Rainbow_Star
+        Price: 15000
+      - Item: C_Guardian_Wing
+        Price: 15000
+  - Tab: Scrolls
+    Items:
+      - Item: C_ResonateTaego
+        Price: 15000
+      - Item: C_Stall_Of_Dominions
+        Price: 15000
+      - Item: C_Stall_Of_Bat
+        Price: 15000
+      - Item: C_Flame_Muffler
+        Price: 15000
+      - Item: C_Eremes_Scarf_BU
+        Price: 15000
+      - Item: C_Eremes_Scarf
+        Price: 15000
+      - Item: C_Eremes_Scarf_Black
+        Price: 15000
+      - Item: C_Cons_Of_Water
+        Price: 15000
+      - Item: C_Cons_Of_Fire
+        Price: 15000
+      - Item: Cons_Of_Earth
+        Price: 15000
+      - Item: C_Hopping_Twin_Pigtail
+        Price: 15000
+      - Item: C_Cons_Of_Wind
+        Price: 15000
+      - Item: C_Luwmin_Ice
+        Price: 15000
+      - Item: C_Cons_Of_Darkness
+        Price: 15000
+      - Item: C_SnackParty
+        Price: 15000
+      - Item: C_Subject_Aura_Red
+        Price: 15000
+      - Item: C_Book_Of_Magic
+        Price: 15000
+      - Item: C_Mobile_Pursuit_System
+        Price: 15000
+      - Item: C_ManyStars_TW
+        Price: 15000
+      - Item: C_Floating_Parasol
+        Price: 15000
+      - Item: C_Alice_Wig
+        Price: 15000
+      - Item: C_Alice_Wig_PK
+        Price: 15000
+      - Item: C_Eleanor_Wig
+        Price: 15000
+      - Item: C_Eleanor_Wig_YL
+        Price: 15000
+      - Item: C_Inner_Color_Long
+        Price: 15000
+      - Item: C_Fishbone_Hair
+        Price: 15000
+      - Item: C_SR_Hair_SV
+        Price: 15000
+      - Item: C_Mermaid_Wig
+        Price: 15000
+      - Item: C_Mermaid_Wig_Peach
+        Price: 15000
+      - Item: C_Straight_Long_BL
+        Price: 15000
+      - Item: C_Straight_Long_WH
+        Price: 15000
+      - Item: C_Straight_Long_YL
+        Price: 15000
+      - Item: C_Medium_Wave
+        Price: 15000
+      - Item: C_Electro_Two_Side_Up
+        Price: 15000
+      - Item: C_Volume_Low_Twin
+        Price: 15000
+      - Item: C_Volume_Low_Twin_WH
+        Price: 15000
+      - Item: C_Electro_Two_Side_Up
+        Price: 15000
+      - Item: C_Volume_Low_Twin_CB
         Price: 15000
