--- a/db/re/item_db_usable.yml
+++ b/db/re/item_db_usable.yml
@@ -58799,7 +58799,7 @@ Body:
       NoMail: true
       NoAuction: true
     Script: |
-      /* callfunc "F_Kachua_Key"; */
+      duplicate_dynamic("Kachua's Secret Box#bm");
   - Id: 23921
     AegisName: Season_Evt_Reward
     Name: Event Reward Box
@@ -64635,10 +64635,7 @@ Body:
   - Id: 101047
     AegisName: Blacksmith_Bless_Box_3
     Name: Blacksmith Blessing Box 3
-    Type: Usable
-    Weight: 0
-    Flags:
-      Container: true
+    Type: Cash
     Trade:
       NoDrop: true
       NoTrade: true
@@ -64648,7 +64645,21 @@ Body:
       NoMail: true
       NoAuction: true
     Script: |
-      getgroupitem(IG_Blacksmith_Bless_Box_3);
+      getitem 6635,3;   /* Blacksmith_Blessing */
+  - Id: 101048
+    AegisName: Shadow_Hammer_Box_3
+    Name: Hollgrehenn's Shadow Refine Hammer Box (3)
+    Type: Cash
+    Trade:
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      getitem 23436,3;   /* Shadow_Refine_Hammer */
   - Id: 101048
     AegisName: Shadow_Hammer_Box_3
     Name: Holgren's Shadow Smelting Hammer Box 3
@@ -65446,6 +65457,24 @@ Body:
       BuyingStore: true
     Script: |
       laphine_upgrade();
+  - Id: 101389
+    AegisName: Helm_Of_Faith_Hammer
+    Name: Helm of Faith Refine Hammer
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
+    Script: |
+      item_reform();
+  - Id: 101390
+    AegisName: Clock_Tower_W_Hammer
+    Name: Clock Tower Basement Refine Hammer
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
+    Script: |
+      item_reform();      
   - Id: 101416
     AegisName: aegis_101416
     Name: Costume Enchant Stone Box 27
@@ -66075,6 +66104,65 @@ Body:
       Container: true
     Script: |
       getgroupitem(IG_Enchant_Stone_Box29);
+  - Id: 101919
+    AegisName: aegis_101919
+    Name: Experience Shadow Selection Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      BuyingStore: true
+  - Id: 101920
+    AegisName: aegis_101920
+    Name: Experience Weapon Shadow Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      Container: true
+    Script: |
+      getgroupitem(IG_AEGIS_101920);
+  - Id: 101921
+    AegisName: aegis_101921
+    Name: Experience Shield Shadow Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      Container: true
+    Script: |
+      getgroupitem(IG_AEGIS_101921);
+  - Id: 101922
+    AegisName: aegis_101922
+    Name: Mega Blitz Shadow Selection Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      BuyingStore: true
+  - Id: 101923
+    AegisName: aegis_101923
+    Name: Mega Blitz Weapon Shadow Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      Container: true
+    Script: |
+      getgroupitem(IG_AEGIS_101923);
+  - Id: 101924
+    AegisName: aegis_101924
+    Name: Mega Blitz Shield Shadow Box    # !todo check english name
+    Type: Usable
+    Weight: 10
+    Flags:
+      Container: true
+    Script: |
+      getgroupitem(IG_AEGIS_101924);
+  - Id: 101925
+    AegisName: aegis_101925
+    Name: Convertible Wing Box    # !todo check english name
+    Type: Usable
+    Flags:
+      BuyingStore: true
+      Container: true
+    Script: |
+      getgroupitem(IG_AEGIS_101925);      
   - Id: 102193
     AegisName: aegis_102193
     Name: Costume Enchant Stone Box 30
