--- a/npc/re/scripts_athena.conf
+++ b/npc/re/scripts_athena.conf
@@ -190,7 +190,7 @@ npc: npc/re/other/resetskill.txt
 npc: npc/re/other/stone_change.txt
 npc: npc/re/other/turbo_track.txt
 npc: npc/re/other/CashShop_Functions.txt
-
+npc: npc/re/other/kachua_key.txt
 // --------------------------- Quests ---------------------------
 // - Eden Group -------------------------------------------------
 npc: npc/re/quests/eden/11-25.txt
