--- a/db/import/item_cash.yml
+++ b/db/import/item_cash.yml
@@ -87,7 +87,7 @@ Body:
         Price: 5000
       - Item: C_Let_It_Snow
         Price: 5000
-      - Item: 20062
+      - Item: C_Angel_Stairs
         Price: 5000
       - Item: C_Rose_Corsage
         Price: 5000
