--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -156,7 +156,7 @@ npc: npc/Age/11-Barter/Barter_Campal.txt
 //npc: npc/custom/jobmaster.txt
 //npc: npc/custom/platinum_skills.txt
 //npc: npc/custom/healer.txt
-//npc: npc/custom/breeder.txt
+npc: npc/custom/breeder.txt
 //npc: npc/custom/card_seller.txt
 //npc: npc/custom/itemmall.txt
 //npc: npc/custom/stylist.txt
